--- a/.github/workflows/release-linux.yaml
+++ b/.github/workflows/release-linux.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.24.0"
+          go-version: "1.25.6"
 
       - name: Install wails
         shell: bash
@@ -54,8 +54,8 @@ jobs:
       - name: Install Ubuntu prerequisites
         shell: bash
         run: |
-          # sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev
+          sudo apt-get update
+          sudo apt-get install -y --fix-missing libgtk-3-dev libwebkit2gtk-4.1-dev
 
       - name: Build wails app for Linux
         run: wails build -clean -tags webkit2_41 -o ${{ env.BUILD_NAME }}
